[gd_scene load_steps=10 format=3 uid="uid://te5jreg2erim"]

[ext_resource type="Script" uid="uid://yxqlp10bnibi" path="res://src/auto_load/app_state_manager.gd" id="1_aq757"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="1_tvcgr"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="2_aq757"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="3_1p3h3"]
[ext_resource type="Script" uid="uid://cr8eu1qq8v7qv" path="res://src/auto_load/loading_panel.gd" id="6_e0auq"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="6_ed5jv"]
[ext_resource type="Texture2D" uid="uid://c623a5yea2ehf" path="res://src/auto_load/assets/progress_black.png" id="7_05yju"]
[ext_resource type="Texture2D" uid="uid://d1pjhbpakyxih" path="res://src/auto_load/assets/progress_white.png" id="8_le1sj"]

[sub_resource type="SystemFont" id="SystemFont_ed5jv"]

[node name="AppStateManager" type="Node"]
script = ExtResource("1_aq757")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("1_tvcgr")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("2_aq757")
initial_state = NodePath("MainMenu")

[node name="MainMenu" type="Node" parent="StateChart/Root"]
script = ExtResource("3_1p3h3")

[node name="Transition" type="Node" parent="StateChart/Root/MainMenu"]
script = ExtResource("6_ed5jv")
to = NodePath("../../Game")
event = &"NewGame"
delay_in_seconds = "0.0"

[node name="Game" type="Node" parent="StateChart/Root"]
script = ExtResource("3_1p3h3")

[node name="LoadingPanel" type="CanvasLayer" parent="."]
layer = 8
script = ExtResource("6_e0auq")

[node name="ColorRect" type="ColorRect" parent="LoadingPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.94509804, 0.9882353, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="LoadingPanel/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -53.5
offset_right = 240.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureProgressBar" type="TextureProgressBar" parent="LoadingPanel/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(720, 48)
layout_mode = 2
texture_under = ExtResource("7_05yju")
texture_progress = ExtResource("8_le1sj")

[node name="Label" type="Label" parent="LoadingPanel/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.1764706, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_ed5jv")
theme_override_font_sizes/font_size = 40
text = "0"

[connection signal="finished" from="LoadingPanel" to="." method="_on_loading_panel_finished"]
